--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,15 @@
 .gradient-4 {
   @apply bg-gradient-to-br from-[#f953c6] to-[#b91d73];
 }
+
+/* global.css */
+.custom-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #d1d5db;
+  border-radius: 4px;
+}
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #a1a1aa;
+}
