--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,16 @@
 .custom-scroll::-webkit-scrollbar-thumb:hover {
   background-color: #a1a1aa;
 }
+
+/* Center align when below */
+.custom-datepicker-popper[data-placement^="bottom"] {
+  top: auto !important;
+  left: 47% !important;
+  transform: translateX(-50%) !important;
+  
+}
+
+/* Optional: add spacing between input and calendar */
+.custom-datepicker-popper {
+  margin-top: 8px !important;
+}
